--- a/assets/css/agency.css
+++ b/assets/css/agency.css
@@ -355,7 +355,9 @@ header .intro-text .intro-lead-in {
 
 @media (max-width: 768px) {
     header .intro-text {
-        padding-top: 10px;
+        padding-top: 0;
+        position: absolute;
+        top: -30px;
     }
 
     header .hero {
