--- a/assets/css/agency.css
+++ b/assets/css/agency.css
@@ -1230,7 +1230,7 @@ section#school h3.last {
 /* SECTION: CONTACT */
 
 section#contact {
-    background-color: #0d99dc;
+    background-color: #fff;
     background-image: url('https://media-6af8.kxcdn.com/assets/img/contact-bg.jpg');
     background-position: center center;
     background-size: cover;
@@ -1238,7 +1238,12 @@ section#contact {
     padding: 0;
 }
 
-@media (max-width: 9992px) {
+@media (max-width: 1200px) {
+    section#contact {
+        background-image: url("https://media-6af8.kxcdn.com/assets/img/contact-bg-992w.jpg");
+    }
+}
+@media (max-width: 768px) {
     section#contact {
         background-image: url("https://media-6af8.kxcdn.com/assets/img/contact-bg-480w.jpg");
     }
@@ -1255,7 +1260,7 @@ section#contact .section-heading {
 }
 
 section#contact h2 {
-    color: #666;
+    color: #333;
     background: rgba(255, 255, 255, 0.8);
     border-radius: 5px;
 }
